--- a/validation.html
+++ b/validation.html
@@ -36,7 +36,7 @@
             <td class="contact_input"><input type="text" name="name" id="name"></td>
           </tr>
           <tr class="contact_line">
-            <td class="contact_sign"><label for="name">Ecorreo electrónico</label></td>
+            <td class="contact_sign"><label for="name">Correo electrónico</label></td>
             <td class="contact_input"><input type="email" name="email" id="email"></td>
           </tr>
           <tr class="contact_line">
